--- a/Kopigrad/Components/Pages/Admin/Admin.razor
+++ b/Kopigrad/Components/Pages/Admin/Admin.razor
@@ -5,6 +5,10 @@
 @rendermode InteractiveServer
 @inject NavigationManager Navigation
 <PageTitle>Admin</PageTitle>
+<head>
+    <link rel="stylesheet" href="/users.css">
+    <link rel="stylesheet" href="/admin.css">
+</head>
 
 <div class="Banner">
     <h5 class="TextBanner">Панель админа</h5>
