--- a/Kopigrad/Components/Pages/Admin/Material/AddMaterial.razor
+++ b/Kopigrad/Components/Pages/Admin/Material/AddMaterial.razor
@@ -3,6 +3,10 @@
 @rendermode InteractiveServer
  @using Kopigrad.Models;
 
+<head>
+    <link rel="stylesheet" href="/users.css">
+    <link rel="stylesheet" href="/admin.css">
+</head>
 
 <div class="Banner">
     <h5 class="TextBanner">Материалы</h5>
