--- a/Kopigrad/Components/Pages/Admin/Pdf/Pdf.razor
+++ b/Kopigrad/Components/Pages/Admin/Pdf/Pdf.razor
@@ -4,6 +4,10 @@
 
 @inject IWebHostEnvironment env
 
+<head>
+    <link rel="stylesheet" href="/users.css">
+    <link rel="stylesheet" href="/admin.css">
+</head>
 
 
 <head>
