--- a/Kopigrad/Components/Pages/Admin/Service/ChangeMiniServiceInfo.razor
+++ b/Kopigrad/Components/Pages/Admin/Service/ChangeMiniServiceInfo.razor
@@ -2,6 +2,10 @@
 @page "/ChangeMiniServiceInfo/{id:int}"
 @inject NavigationManager Navigation
 @rendermode InteractiveServer
+<head>
+    <link rel="stylesheet" href="/users.css">
+    <link rel="stylesheet" href="/admin.css">
+</head>
 
 <div class="Banner">
     <h5 class="TextBanner">Редактирование содержания @nameBanner</h5>
