--- a/Kopigrad/Components/Pages/Admin/Service/Service.razor
+++ b/Kopigrad/Components/Pages/Admin/Service/Service.razor
@@ -5,9 +5,14 @@
 
 
 
+
 @inject NavigationManager Navigation
 <PageTitle>Admin</PageTitle>
 
+<head>
+    <link rel="stylesheet" href="/users.css">
+    <link rel="stylesheet" href="/admin.css">
+</head>
 
 <div class="Banner">
     <h5 class="TextBanner">Услуги</h5>
