--- a/Kopigrad/Components/Pages/User/BusinessCard.razor
+++ b/Kopigrad/Components/Pages/User/BusinessCard.razor
@@ -5,9 +5,9 @@
 @using System.Net.Http.Json
 @inject HttpClient Http
 
-
 <head>
-    <link rel="stylesheet" href="users.css">
+    <link rel="stylesheet" href="/users.css">
+    <link rel="stylesheet" href="/admin.css">
 </head>
 
 <div class="Banner">
