--- a/Kopigrad/Components/Pages/User/MainUsers.razor
+++ b/Kopigrad/Components/Pages/User/MainUsers.razor
@@ -5,14 +5,19 @@
 
 <div class="Vertical">
     <head>
-        <link rel="stylesheet" href="users.css">
-        <link rel="stylesheet" href="admin.css">
+        <link rel="stylesheet" href="/users.css">
+        <link rel="stylesheet" href="/admin.css">
     </head>
+
+
+
 
     <img class="UsersBaner" src="Image\Baners\banerOne.png">
 
     <h5 class="TextCenter">Наши услуги</h5>
 </div>
+
+
 
 <div class="CenterDiv">
     <div class="DivService">
