--- a/Kopigrad/Components/Pages/Admin/Service/AddService.razor
+++ b/Kopigrad/Components/Pages/Admin/Service/AddService.razor
@@ -2,6 +2,10 @@
 @layout Layout.Menu.MenuAdmin;
 @rendermode InteractiveServer
 @inject NavigationManager Navigation
+<head>
+    <link rel="stylesheet" href="/users.css">
+    <link rel="stylesheet" href="/admin.css">
+</head>
 
 <div class="Banner">
     <h5 class="TextBanner">Добавление услуги</h5>
