--- a/Kopigrad/Components/Pages/User/CreateRequest.razor
+++ b/Kopigrad/Components/Pages/User/CreateRequest.razor
@@ -5,9 +5,10 @@
 
 <div>
     <head>
-        <link rel="stylesheet" href="users.css">
-        <link rel="stylesheet" href="admin.css">
+        <link rel="stylesheet" href="/users.css">
+        <link rel="stylesheet" href="/admin.css">
     </head>
+
 
     <div class="Banner">
 
