--- a/Kopigrad/Components/Pages/User/infoService.razor
+++ b/Kopigrad/Components/Pages/User/infoService.razor
@@ -145,7 +145,7 @@
         <button class="ButtonUsers" @onclick="ClickRequst">Отправить заявку</button> *@
         @if(id == 6)
         {
-            <button class="ButtonUsers" @onclick="ClickRequst">Конструтор визиток</button>
+            <button class="ButtonUsers" @onclick="ClickGenerate">Конструтор визиток</button>
         }
     </div>
 </div>
@@ -301,7 +301,7 @@
 
     async Task ClickGenerate()
     {
-        Navigation.NavigateTo($"//businesscard");
+        Navigation.NavigateTo($"/businesscard");
         await Task.CompletedTask;
     }
 
