--- a/Kopigrad/Components/Pages/User/infoService.razor
+++ b/Kopigrad/Components/Pages/User/infoService.razor
@@ -139,10 +139,10 @@
 
 
     <div class="ColumnUserCalculatorAmdButton">
-    @*     <h5 class="NameMiniService">Оформить заявку</h5> *@
+        <h5 class="NameMiniService">Оформить заявку</h5>
 
-@*         <button class="ButtonUsers">Написать на whatsapp</button>
-        <button class="ButtonUsers" @onclick="ClickRequst">Отправить заявку</button> *@
+        <button class="ButtonUsers">Написать на whatsapp</button>
+        <button class="ButtonUsers" @onclick="ClickRequst">Отправить заявку</button>
         @if(id == 6)
         {
             <button class="ButtonUsers" @onclick="ClickGenerate">Конструтор визиток</button>
