--- a/Kopigrad/Components/App.razor
+++ b/Kopigrad/Components/App.razor
@@ -20,6 +20,27 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+
+
+    <script>
+        window.getCookie = function (name) {
+            let matches = document.cookie.match(new RegExp(
+                "(?:^|; )" + name.replace(/([\.$?*|{}\(\)\[\]\\\/\+^])/g, '\\$1') + "=([^;]*)"
+            ));
+            return matches ? decodeURIComponent(matches[1]) : null;
+        };
+    </script>
+
+    <script>
+        window.saveState = function (key, value) {
+            localStorage.setItem(key, value);
+        };
+
+        window.loadState = function (key) {
+            return localStorage.getItem(key);
+        };
+    </script>
+
 </body>
 
 </html>
