--- a/Kopigrad/Components/App.razor
+++ b/Kopigrad/Components/App.razor
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="~/admin.css?v=1.0.1" />
     <link rel="stylesheet" href="~/users.css?v=1.0.1" />
+    <link rel="stylesheet" href="~/orders.css?v=1.0.1" />
 
 
 
